Dark mode fix left

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -3,7 +3,20 @@
      padding:0;
      box-sizing: border-box;
 }
+:root{
+     --body-color:#efefef;
+     --nav-color:#1876f2;
+     --bg-color:#fff;
+}
+
+.dark-theme{
+     --body-color:#0a0a0a;
+     --nav-color:#000;
+     --bg-color:#000;
+}
+
 body{
-     background:$background-color;
+     background:var(--body-color);
      font-family:sans-serif;
+     transition: background 0.3s;
 }
